[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Man Sprite.png" type="Texture" id=2]
[ext_resource path="res://Player/Weapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hitboxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://WhiteShader.tres" type="Shader" id=5]
[ext_resource path="res://Hitboxes/Hitbox.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 18.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.0
height = 0.0

[sub_resource type="Animation" id=6]
resource_name = "RESET"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 3 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=7]
radius = 14.0
height = 22.0

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_mask = 12
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
z_index = 1
texture = ExtResource( 2 )

[node name="RollTimer" type="Timer" parent="."]

[node name="Weapon" parent="." instance=ExtResource( 3 )]
position = Vector2( 11, -1 )
rotation = -1.22173
collision_mask = 8

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/Start = SubResource( 4 )
anims/Stop = SubResource( 5 )

[node name="HitBox" parent="." instance=ExtResource( 6 )]
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -16 )
rotation = 1.5708
shape = SubResource( 7 )

[connection signal="timeout" from="RollTimer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]

[editable path="Hurtbox"]
[editable path="HitBox"]
